--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <script type="text/javascript" src="things_to_do.js"></script>
+        <style>
+            .center {
+                margin: auto;
+                width: 50%;
+            }
+
+            .textCenter {
+                text-align: center;
+            }
+
+            .button {
+                background-color: #4CAF50; /* Green */
+                border: none;
+                color: white;
+                padding: 16px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                transition-duration: 0.15s;
+                cursor: pointer;
+            }
+
+            .button1 {
+                background-color: white; 
+                color: black; 
+                border: 2px solid #4CAF50;
+            }
+
+            .button1:hover {
+                background-color: #4CAF50;
+                color: white;
+            }
+
+            .wrapper {
+                text-align: center;
+            }
+
+            body {
+                font-family: 'Roboto', sans-serif;
+            }
+        </style>
+        
+    </head>
+<body>
+
+
+<div class="wrapper">
+    <h1 class="textCenter">Bored?</h1>
+        <button class="button button1" onclick="generateIdea()">Tell Me What To Do</button>
+    <h1 class="textCenter" id="idea">...</h1>
+    <!-- <iframe width="420" height="315" frameBorder="0"
+    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    </iframe> -->
+</div>
+
+<script>
+    function generateIdea() {
+        document.getElementById("idea").textContent = "Do a thing.";
+        console.log(data.length);
+    }
+</script>
+</body>
+
+
+</html>
