--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">    
         <script type="text/javascript" src="things_to_do.js"></script>
         <style>
             .center {
@@ -22,7 +22,7 @@
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
-                font-size: 16px;
+                font-size: 1em;
                 margin: 4px 2px;
                 transition-duration: 0.15s;
                 cursor: pointer;
@@ -62,17 +62,18 @@
             }
 
             .title {
-                font-size: 4em;
-                /* display: block; */
-                font-weight: bold;
-                margin: 2rem;
+                font-size: 5em;
+                font-weight: 500;
+                margin-bottom: 2rem;
+                color:rgb(22, 22, 22);
             }
 
             .idea {
+                display: block;
                 font-size: 2em;
-                /* display: block; */
-                /* font-weight: bold; */
+                font-weight: 400;
                 margin: 2rem;
+                color:rgb(22, 22, 22);
             }
 
             .footer {
@@ -87,12 +88,24 @@
             .footer-text {
                 transition-duration: 0.15s;
                 color:rgb(187, 187, 187);
-                font-weight: bold;
+                font-weight: 500;
                 text-decoration: none;
             }
 
             .footer-text:hover {
                 color:rgb(95, 95, 95)
+            }
+
+            a:link {
+                color: inherit;
+                /* text-decoration: none; */
+            }
+
+            body:not(.user-is-tabbing) button:focus,
+            body:not(.user-is-tabbing) input:focus,
+            body:not(.user-is-tabbing) select:focus,
+            body:not(.user-is-tabbing) textarea:focus {
+                outline: none;
             }
         </style>
         
@@ -103,10 +116,7 @@
 <div class="wrapper">
     <div class="title">Bored?</div>
     <button class="button button1" onclick="generateIdea()">Tell Me What To Do</button>
-    <div class="idea" id="idea"></div>
-    <!-- <iframe width="420" height="315" frameBorder="0"
-    src="https://www.youtube.com/embed/tgbNymZ7vqY">
-    </iframe> -->
+    <a target="_blank" class="idea" id="idea"></a>
     <div class="footer">
         <a target="_blank" href="https://github.com/lcapkovic/tellmewhattodo" class="footer-text">Contribute</div>
     </div>
@@ -114,6 +124,7 @@
 
 <script>
     function generateIdea() {        
+        document.getElementById("idea").removeAttribute("href");
         var initialFreq = Math.floor(Math.random() * 20) + 20;
         getRandomIdea(initialFreq, initialFreq, 0);
     }
@@ -128,11 +139,22 @@
         document.getElementById("idea").style.opacity = 1 - Math.cbrt(freq/initialFreq);
 
         if (freq == 0) {
+            if (data[ix]["link"] != "") {
+                document.getElementById("idea").href = data[ix]["link"];
+            }
             return;
         }
 
         setTimeout(getRandomIdea.bind(null, freq-1, initialFreq, ix), 1000/(freq+4));
     }
+
+    function handleFirstTab(e) {
+        if (e.keyCode === 9) { // the "I am a keyboard user" key
+            document.body.classList.add('user-is-tabbing');
+            window.removeEventListener('keydown', handleFirstTab);
+        }
+    }
+    window.addEventListener('keydown', handleFirstTab);
 </script>
 </body>
 
