Fix safari footer link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">    
         <script type="text/javascript" src="things_to_do.js"></script>
+        <title>Tell me what to do</title>
         <style>
             .center {
                 margin: auto;
@@ -29,7 +30,7 @@
             }
 
             .button1 {
-                background-color: white; 
+                background-color: transparent; 
                 color: black; 
                 border: 2px solid rgb(0, 0, 0);
             }
@@ -87,13 +88,13 @@
 
             .footer-text {
                 transition-duration: 0.15s;
-                color:rgb(187, 187, 187);
+                color:rgb(187, 187, 187)!important;
                 font-weight: 500;
                 text-decoration: none;
             }
 
             .footer-text:hover {
-                color:rgb(95, 95, 95)
+                color:rgb(95, 95, 95)!important;
             }
 
             a:link {
