--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             .footer-text {
                 transition-duration: 0.15s;
                 color:rgb(187, 187, 187)!important;
-                font-weight: 500;
+                /* font-weight: 500; */
                 text-decoration: none;
             }
 
@@ -128,7 +128,7 @@
     <button class="button button1" onclick="generateIdea()">Tell Me What To Do</button>
     <a target="_blank" class="idea" id="idea"></a>
     <div class="footer">
-        <a target="_blank" href="https://github.com/lcapkovic/tellmewhattodo" class="footer-text">Contribute</div>
+        <a target="_blank" href="https://github.com/lcapkovic/tellmewhattodo" class="footer-text">Contribute</a>
     </div>
 </div>
 
