Remove pasted comment

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     }
 
     function handleFirstTab(e) {
-        if (e.keyCode === 9) { // the "I am a keyboard user" key
+        if (e.keyCode === 9) {
             document.body.classList.add('user-is-tabbing');
             window.removeEventListener('keydown', handleFirstTab);
         }
