Change a few strings

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">    
         <script type="text/javascript" src="things_to_do.js"></script>
-        <title>Tell me what to do</title>
+        <title>Tell me what to do.</title>
         <style>
             .center {
                 margin: auto;
@@ -125,7 +125,7 @@
 
 <div class="wrapper">
     <div class="title">Bored?</div>
-    <button class="button button1" onclick="generateIdea()">Tell Me What To Do</button>
+    <button class="button button1" onclick="generateIdea()">Tell me what to do.</button>
     <a target="_blank" class="idea" id="idea"></a>
     <div class="footer">
         <a target="_blank" href="https://github.com/lcapkovic/tellmewhattodo" class="footer-text">Contribute</a>
