Add submission email

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <button class="button button1" onclick="generateIdea()">Tell me what to do.</button>
     <a target="_blank" class="idea" id="idea"></a>
     <div class="footer">
-        <a target="_blank" href="https://github.com/lcapkovic/tellmewhattodo" class="footer-text">Contribute</a>
+        <a href="mailto:tmwtdsubmissions@gmail.com" class="footer-text">Submit ideas</a>
     </div>
 </div>
 
